Update project page for 2015-01-01 release.

--- a/tool.css
+++ b/tool.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Segoe UI', Arial, sans-serif;
+    font-family: "Segoe UI", GillSans, Helvetica, sans-serif;
     font-size: 10pt;
 }
 
@@ -14,9 +14,9 @@ h2 {
     margin-top: 2em;
 }
 
-pre {
-    background-color: rgba(0, 0, 0, 0.1);
-    float: left;
+h3 {
+    font-size: 100%;
+    font-weight: normal;
     margin-bottom: 0;
 }
 
@@ -24,10 +24,14 @@ pre {
   text-align:center;
 }
 
-.clear {
-    overflow: hidden;
-}
-
 .label {
     text-decoration: underline;
+}
+
+.notes {
+    margin-top: 0;
+}
+
+.large {
+    font-size: 120%;
 }
